# NJU-Genshin-2023

./: CMakeLists.txt  README.md  main.c
build-shapeZ-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  object_script.shapeZ.Debug  object_script.shapeZ.Release  ui_grade.h  ui_gradescene.h  ui_mainwindow.h  ui_map.h  ui_store.h
build-shapeZ-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/debug/: moc_channel.cpp  moc_grade.cpp  moc_gradescene.cpp  moc_mainwindow.cpp  moc_map.cpp  moc_mapwidget.cpp  moc_mapwindow.cpp  moc_mineral.cpp  moc_mychannel.cpp  moc_mylabel.cpp  moc_mymineral.cpp  moc_store.cpp  qrc_res.cpp
operate/: logfile.txt  partI.c  partI.h  partII.c  partII.h  partIII.c  partIII.h
shapeZ/: gradescene.cpp  gradescene.h  gradescene.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h  map.ui  mylabel.cpp  mylabel.h  mymineral.cpp  mymineral.h  res.qrc  shapeZ.pro  store.cpp  store.h  store.ui
